--- a/examples/form-designer-react/package.json
+++ b/examples/form-designer-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "form-designer-react",
   "private": true,
-  "version": "0.0.1-beta.9",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
