--- a/packages/form-designer-react/package.json
+++ b/packages/form-designer-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@portalzyt/form-designer-react",
-  "version": "0.0.1-beta.11",
+  "version": "1.0.0",
   "description": "form-design-react",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
