--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "release": "lerna publish --registry=https://registry.npmjs.org/",
     "publishOnly:force": "lerna publish from-package --yes  --ignore-scripts --no-git-tag-version  --registry=https://registry.npmjs.org/",
     "publishOnly": "lerna publish --ignore-scripts --no-git-tag-version --force-publish --registry=https://registry.npmjs.org/",
-    "format": "prettier --write \"**/*.{ts,tsx,js,json,css,less}\"",
-    "triones:publishOnly": "lerna publish --ignore-scripts --no-git-tag-version --force-publish --registry=https://moensun-npm.pkg.coding.net/npm/moensun/"
+    "format": "prettier --write \"**/*.{ts,tsx,js,json,css,less}\""
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
